projet_gl/src/test/deca/context/invalid/2_05/2_05_1_DeclField.deca
// Description:
//    Problème de déclaration de field de type void
//
// Resultats:
//    Ligne 11: Field: field should not be of type void
// 
// Historique:
//    cree le 17/01/2024

class A {
    void field;
}
